Added comments for the layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <!--Make a Nav Bar maybe a logo on the left side and options on the right-->
+
+  <!--Photo banner with text in the middle-->
+
+  <!--Cards of the founders of the site with their descriptions-->
+
+  <!--short message of our mission-->
+
+  <!--sign up form to become a volunteer-->
+
+  <!--contact us-->
 </body>
 </html>
