add more to the layout and sample images

--- a/index.html
+++ b/index.html
@@ -11,15 +11,35 @@
 </head>
 <body>
   <!--Make a Nav Bar maybe a logo on the left side and options on the right-->
-
+  <div class="nav">
+    <a href="#ourTeam">Our Team</a>
+    <a href="#ourMission">Our Mission</a>
+    <a href="#signUp">Sign Up</a>
+    <a href="#contactUs">Contact Us</a>
+  </div>
   <!--Photo banner with text in the middle-->
-
+  <div class="banner">
+    <div class="bannerImage">
+      <img id="bannerImage" src="https://images.pexels.com/photos/10595120/pexels-photo-10595120.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1 alt="beach">
+    </div>
+    <div class="bannerText">
+      <h1>Beach Clean-up</h1>
+      <h2>Volunteer</h2>
+    </div>
+  </div>
   <!--Cards of the founders of the site with their descriptions-->
+  <div class="ourTeam" id="ourTeam">
 
+  </div>
   <!--short message of our mission-->
+  <div class="ourMission" id="ourMission">
 
+  </div>
   <!--sign up form to become a volunteer-->
+  <div class="signUp" id="signUp">
 
+  </div>
   <!--contact us-->
+  <div class="contactUs" id="contactUs">
 </body>
 </html>
