--- a/index.html
+++ b/index.html
@@ -9,26 +9,42 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
+
   <!--Make a Nav Bar maybe a logo on the left side and options on the right-->
-  <div class="wrapper side-panel-open">
-    <div class="main">
-      main content
+  <div class="box-area">
+    <header>
+      <div class="wrapper">
+        <div class="logo">
+          <img src="palm-tree-logo.png" alt="logo">
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#bannerImage">Home</a></li>
+            <li><a href="#ourTeam">The Team</a></li>
+            <li><a href="#ourMission">Our Mission</a></li>
+            <li><a href="#signUp">Sign Up</a></li>
+            <li><a href="#contactUs">Contact us</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="banner-area">
+      <h2>Beach Clean-up</h2>
     </div>
-    <button class="side-panel-toggle" type="button">
-      <span class="material-symbols-outlined">menu</span>
-    </button>
-    <div class="side-panel">
-      <a href="#ourTeam">Our Team</a>
-      <a href="#ourMission">Our Mission</a>
-      <a href="#signUp">Sign Up</a>
-      <a href="#contactUs">Contact Us</a>    </div>
+    <div class="content-area">
+      <div class="wrapper">
+        <h2>text here</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, illum ipsa nisi odio molestiae ut distinctio! Dignissimos, suscipit. Sapiente quis veritatis deserunt nesciunt magni ex molestias? Sed earum aspernatur molestiae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi, maxime laborum doloribus, alias suscipit modi magnam fugiat autem iste magni, voluptatum architecto eius eum quos eaque atque totam in. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto cum rem consectetur? Reiciendis nesciunt distinctio autem enim iusto ipsa fuga ipsam vero sit, id provident sunt ullam, repellat culpa officia!</p>
+      </div>
   </div>
   <!--Photo banner with text in the middle-->
   <div class="banner">
     <div class="bannerImage">
-      <img id="bannerImage" src="https://images.pexels.com/photos/10595120/pexels-photo-10595120.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="beach">
+      <img id="bannerImage" src="" alt="beach">
       <div class="bannerText">
 
       </div>
