--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!--Make a Nav Bar maybe a logo on the left side and options on the right-->
-  <div class="box-area">
+  <div class="box-area" id="bannerImage">
     <header>
       <div class="wrapper">
         <div class="logo">
@@ -32,31 +32,21 @@
         </nav>
       </div>
     </header>
+      <!--Photo banner with text in the middle-->
     <div class="banner-area">
-      <h2>Beach Clean-up</h2>
+      <h2>We are proud to make a difference.</h2>
     </div>
-    <div class="content-area">
-      <div class="wrapper">
-        <h2>text here</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, illum ipsa nisi odio molestiae ut distinctio! Dignissimos, suscipit. Sapiente quis veritatis deserunt nesciunt magni ex molestias? Sed earum aspernatur molestiae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi, maxime laborum doloribus, alias suscipit modi magnam fugiat autem iste magni, voluptatum architecto eius eum quos eaque atque totam in. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto cum rem consectetur? Reiciendis nesciunt distinctio autem enim iusto ipsa fuga ipsam vero sit, id provident sunt ullam, repellat culpa officia!</p>
-      </div>
-  </div>
-  <!--Photo banner with text in the middle-->
-  <div class="banner">
-    <div class="bannerImage">
-      <img id="bannerImage" src="" alt="beach">
-      <div class="bannerText">
-
-      </div>
-    </div>
-  </div>
   <!--Cards of the founders of the site with their descriptions-->
   <div class="ourTeam" id="ourTeam">
-
+    
   </div>
-  <!--short message of our mission-->
-  <div class="ourMission" id="ourMission">
 
+  <!--short message of our mission-->
+    <div class="content-area" id="ourMission">
+      <div class="wrapper">
+        <h2>Our Mission</h2>
+        <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities. By uniting for our beach cleanup events, we invite individuals from all walks of life to play a vital role in this important work. Each volunteer becomes a steward of the environment, contributing to a healthier habitat for wildlife and ensuring that our beaches remain safe and enjoyable for everyone. As we gather to remove debris and raise awareness about the impact of pollution, we also foster a sense of community and shared responsibility. Together, we can educate one another about the challenges facing our oceans and inspire sustainable practices in our daily lives. Every piece of litter we collect not only enhances the beauty of our shoreline but also serves as a reminder of the importance of our efforts. Let’s join hands in our commitment to a cleaner, healthier beach—because every action counts, and together, we can create lasting change for our environment.</p>
+      </div>
   </div>
   <!--sign up form to become a volunteer-->
   <div class="signUp" id="signUp">
