--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -38,9 +41,34 @@
     </div>
   <!--Cards of the founders of the site with their descriptions-->
   <div class="ourTeam" id="ourTeam">
-    
-  </div>
+    <div class="wrapper">
+    <h2>Our Team</h2>
+    <div class="card-group">
+      <div class="card">
+        <img src="pfp.jpg">
+        <div class="card-body">
+          <h5 class="card-title">CEO/Founder</h5>
+          <p class="card-text">I’m excited to announce the formation of our new foundation dedicated to beach cleanup initiatives. As stewards of our environment, we have a unique opportunity to make a meaningful impact in preserving our beautiful coastlines.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="pfp.jpg">
+        <div class="card-body">
+          <h5 class="card-title">CO-Founder</h5>
+          <p class="card-text">Our mission is to unite volunteers, raise awareness about ocean health, and promote sustainable practices. By working together, we can create cleaner, safer beaches for everyone to enjoy and protect our marine ecosystems for future generations.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="pfp.jpg">
+        <div class="card-body">
+          <h5 class="card-title">CO-Founder</h5>
+          <p class="card-text">I encourage each of you to get involved—whether by volunteering, spreading the word, or sharing your ideas for future initiatives. Together, we can build a strong community dedicated to making a difference.
 
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!--short message of our mission-->
     <div class="content-area" id="ourMission">
       <div class="wrapper">
@@ -48,6 +76,7 @@
         <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities. By uniting for our beach cleanup events, we invite individuals from all walks of life to play a vital role in this important work. Each volunteer becomes a steward of the environment, contributing to a healthier habitat for wildlife and ensuring that our beaches remain safe and enjoyable for everyone. As we gather to remove debris and raise awareness about the impact of pollution, we also foster a sense of community and shared responsibility. Together, we can educate one another about the challenges facing our oceans and inspire sustainable practices in our daily lives. Every piece of litter we collect not only enhances the beauty of our shoreline but also serves as a reminder of the importance of our efforts. Let’s join hands in our commitment to a cleaner, healthier beach—because every action counts, and together, we can create lasting change for our environment.</p>
       </div>
   </div>
+  <hr>
   <!--sign up form to become a volunteer-->
   <div class="signUp" id="signUp">
 
