--- a/index.html
+++ b/index.html
@@ -69,21 +69,65 @@
       </div>
     </div>
   </div>
+  <div id="ourMission"></div>
+
   <!--short message of our mission-->
-    <div class="content-area" id="ourMission">
+    <div class="content-area">
       <div class="wrapper">
+        <hr>
         <h2>Our Mission</h2>
         <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities. By uniting for our beach cleanup events, we invite individuals from all walks of life to play a vital role in this important work. Each volunteer becomes a steward of the environment, contributing to a healthier habitat for wildlife and ensuring that our beaches remain safe and enjoyable for everyone. As we gather to remove debris and raise awareness about the impact of pollution, we also foster a sense of community and shared responsibility. Together, we can educate one another about the challenges facing our oceans and inspire sustainable practices in our daily lives. Every piece of litter we collect not only enhances the beauty of our shoreline but also serves as a reminder of the importance of our efforts. Let’s join hands in our commitment to a cleaner, healthier beach—because every action counts, and together, we can create lasting change for our environment.</p>
       </div>
+      <hr id="signUp">
   </div>
-  <hr>
   <!--sign up form to become a volunteer-->
-  <div class="signUp" id="signUp">
+  <div class="signUp">
+    <h2>Sign Up</h2>
+    <form action="/submit" method="post" enctype="multipart/form-data">
+        <!-- First Name -->
+        <div>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="first_name" required>
+        </div>
 
+        <!-- Last Name -->
+        <div>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" name="last_name" required>
+        </div>
+
+        <!-- Age -->
+        <div>
+            <label for="age">Age</label>
+            <input type="number" id="age" name="age" min="1" required>
+        </div>
+
+        <!-- Email -->
+        <div>
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+
+        <!-- Why They Want to Join (Textarea) -->
+        <div>
+            <label for="reason">Why Would You Like to Join the Beach Cleanup?</label>
+            <textarea id="reason" name="reason" maxlength="250" rows="4" placeholder="Write up to 250 characters" required></textarea>
+        </div>
+
+        <!-- Picture Upload -->
+        <div>
+            <label for="picture">Upload a Picture (Max 2 MB)</label>
+            <input type="file" id="picture" name="picture" accept="image/*" required>
+            <p class="note">Please upload an image file (jpg, png, etc.) with a maximum size of 2 MB.</p>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit">Submit</button>
+    </form>
   </div>
   <!--contact us-->
   <div class="contactUs" id="contactUs">
-    
+
   </div>
 
   <script src="script.js"></script>
