--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <ul>
             <li><a href="#bannerImage">Home</a></li>
-            <li><a href="#ourTeam">The Team</a></li>
+            <li><a href="#ourTeam">Our Team</a></li>
             <li><a href="#ourMission">Our Mission</a></li>
             <li><a href="#signUp">Sign Up</a></li>
             <li><a href="#contactUs">Contact us</a></li>
@@ -36,6 +36,7 @@
     </header>
       <!--Photo banner with text in the middle-->
     <div class="banner-area">
+      <img src="banner.jpg" alt="beach">
       <h2>We are proud to make a difference.</h2>
     </div>
   <!--Cards of the founders of the site with their descriptions-->
@@ -73,7 +74,6 @@
   <!--short message of our mission-->
     <div class="content-area">
       <div class="wrapper">
-        <hr>
         <h2>Our Mission</h2>
         <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities. By uniting for our beach cleanup events, we invite individuals from all walks of life to play a vital role in this important work. Each volunteer becomes a steward of the environment, contributing to a healthier habitat for wildlife and ensuring that our beaches remain safe and enjoyable for everyone. As we gather to remove debris and raise awareness about the impact of pollution, we also foster a sense of community and shared responsibility. Together, we can educate one another about the challenges facing our oceans and inspire sustainable practices in our daily lives. Every piece of litter we collect not only enhances the beauty of our shoreline but also serves as a reminder of the importance of our efforts. Let’s join hands in our commitment to a cleaner, healthier beach—because every action counts, and together, we can create lasting change for our environment.</p>
       </div>
@@ -81,9 +81,9 @@
   </div>
   <!--sign up form to become a volunteer-->
   <div class="signUp">
-    <h2>Sign Up</h2>
     <form action="/submit" method="post" enctype="multipart/form-data">
         <!-- First Name -->
+        <h2>Sign Up</h2>
         <div>
             <label for="first-name">First Name</label>
             <input type="text" id="first-name" name="first_name" required>
