--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
       <div class="wrapper">
         <nav>
           <div class="logo">
-            <img src="palm-tree-logo.png" alt="logo">
+            <img src="logo.png" alt="logo">
           </div>
           <ul>
             <li><a href="#bannerImage">Home</a></li>
-            <li><a href="#ourTeam">Our Team</a></li>
-            <li><a href="#ourMission">Our Mission</a></li>
-            <li><a href="#signUp">Sign Up</a></li>
+            <li><a href="#signUp">Volunteer</a></li>
             <li><a href="#contactUs">Contact us</a></li>
           </ul>
         </nav>
@@ -36,54 +34,65 @@
     </header>
       <!--Photo banner with text in the middle-->
     <div class="banner-area">
-      <img src="banner.jpg" alt="beach">
-      <h2>We are proud to make a difference.</h2>
+      <img src="beach1.png" alt="beach">
     </div>
-  <!--Cards of the founders of the site with their descriptions-->
-  <div class="ourTeam" id="ourTeam">
-    <div class="wrapper">
-    <h2>Our Team</h2>
-    <div class="card-group">
-      <div class="card">
-        <img src="pfp.jpg">
-        <div class="card-body">
-          <h5 class="card-title">CEO/Founder</h5>
-          <p class="card-text">I’m excited to announce the formation of our new foundation dedicated to beach cleanup initiatives. As stewards of our environment, we have a unique opportunity to make a meaningful impact in preserving our beautiful coastlines.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="pfp.jpg">
-        <div class="card-body">
-          <h5 class="card-title">CO-Founder</h5>
-          <p class="card-text">Our mission is to unite volunteers, raise awareness about ocean health, and promote sustainable practices. By working together, we can create cleaner, safer beaches for everyone to enjoy and protect our marine ecosystems for future generations.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="pfp.jpg">
-        <div class="card-body">
-          <h5 class="card-title">CO-Founder</h5>
-          <p class="card-text">I encourage each of you to get involved—whether by volunteering, spreading the word, or sharing your ideas for future initiatives. Together, we can build a strong community dedicated to making a difference.
 
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="ourMission"></div>
+<!--short message of our mission-->
+<div class="content-area" id="ourMission">
+  <div class="wrapper">
+      <hr>
+      <h2>Our Mission</h2>
+      <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities.</p>
+      <hr>
+      <h2>Who we are…</h2>
+      <p>The Blue Future Club is a non-profit, community education organization dedicated to enhancing eco-friendly waste management on our shores. Our organization was founded in 1999 and is overseen by a volunteer board made up of representatives from businesses, industry, environmental organizations, and civic associations. As an affiliate of the local County, we continually strive to make great efforts to keep our beaches clean, beautiful, and safe for the future of our community.</p>
+      <hr>
+      <h2>Why we do it …</h2>
+      <p>Beach cleanups offer a fantastic opportunity to help protect the marine environment and generate public awareness while getting some exercise! During our two-hour-cleanups, we collect trash from a local beach and document our findings, contributing to a long-term study on marine pollution. Each event begins with a brief presentation on local beach debris issues and practical ways to safeguard our oceans. At the end of the cleanup, we weigh the collected trash to track our impact. It’s a fun and educational experience for kids as well!</p>
+      <hr>
+      <h2>How it all started …</h2>
+      <p>The Blue Future Club was founded in 1999 by the local mayor and a beach restaurant owner who wanted to simply start taking a stand against marine pollution. In the early years, BFC focused primarily on campaigns to protect individual species, such as birds and sea turtles. Although we have celebrated several victories, it became clear that these species couldn’t be protected without safeguarding their habitats and implementing strong, effective policies. This realization prompted us to think bigger, expand our programs, and adopt a broader, ecosystem-based approach to conservation.</p>
+      <hr>
+      <h2>Who can sign up …</h2>
+      <p>Blue Future Club is committed to fostering an inclusive environment where all volunteers are valued and respected. We welcome participation from individuals of all backgrounds and experiences, without discrimination or harassment of any kind, including race, color, religion, age, sex, national origin, sexual orientation, gender identity, or any other characteristics protected by the law. We encourage volunteers with diverse skills and experiences to join us—perfection is not required! By working together, we can grow Blue Future Club into a stronger, more inclusive community dedicated to protecting our oceans.</p>
 
-  <!--short message of our mission-->
-    <div class="content-area">
-      <div class="wrapper">
-        <h2>Our Mission</h2>
-        <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities. By uniting for our beach cleanup events, we invite individuals from all walks of life to play a vital role in this important work. Each volunteer becomes a steward of the environment, contributing to a healthier habitat for wildlife and ensuring that our beaches remain safe and enjoyable for everyone. As we gather to remove debris and raise awareness about the impact of pollution, we also foster a sense of community and shared responsibility. Together, we can educate one another about the challenges facing our oceans and inspire sustainable practices in our daily lives. Every piece of litter we collect not only enhances the beauty of our shoreline but also serves as a reminder of the importance of our efforts. Let’s join hands in our commitment to a cleaner, healthier beach—because every action counts, and together, we can create lasting change for our environment.</p>
-      </div>
       <hr id="signUp">
   </div>
+</div>
+
+<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="banner.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="banner.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="banner.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+  <!--short message of our mission-->
+
   <!--sign up form to become a volunteer-->
-  <div class="signUp">
+  <div class="signUp" id="signUp">
     <form action="/submit" method="post" enctype="multipart/form-data">
         <!-- First Name -->
-        <h2>Sign Up</h2>
+        <h2>Volunteer</h2>
         <div>
             <label for="first-name">First Name</label>
             <input type="text" id="first-name" name="first_name" required>
@@ -125,9 +134,20 @@
     </form>
   </div>
   <!--contact us-->
-  <div class="contactUs" id="contactUs">
-
-  </div>
+  <footer>
+    <div class="footer-content" id="contactUs">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feel free to reach out!</p>
+        <ul>
+            <li>Email: contact@example.com</li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Address: 123 Main St, Anytown, USA</li>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Your Company. All rights reserved.</p>
+    </div>
+</footer>
 
   <script src="script.js"></script>
 </body>
