--- a/index.html
+++ b/index.html
@@ -1,155 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beach Clean-up Volunteer</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beach Clean-up Volunteer</title>
+    
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-  <!--Make a Nav Bar maybe a logo on the left side and options on the right-->
-  <div class="box-area" id="bannerImage">
+
+    <!-- Header with Logo and Navigation -->
     <header>
-      <div class="wrapper">
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
         <nav>
-          <div class="logo">
-            <img src="logo.png" alt="logo">
-          </div>
-          <ul>
-            <li><a href="#bannerImage">Home</a></li>
-            <li><a href="#signUp">Volunteer</a></li>
-            <li><a href="#contactUs">Contact us</a></li>
-          </ul>
+            <ul>
+                <li><a href="#banner">Home</a></li>
+                <li><a href="#ourMission">About</a></li>
+                <li><a href="#signUp">Volunteer</a></li>
+                <li><a href="#contactUs">Contact</a></li>
+            </ul>
         </nav>
-      </div>
     </header>
-      <!--Photo banner with text in the middle-->
-    <div class="banner-area">
-      <img src="beach1.png" alt="beach">
+  
+    <!-- Banner Section -->
+    <div class="banner-container" id="banner">
+        <img src="banner.jpg" alt="Banner Image" class="banner-image">
+        <div class="banner-text">Welcome to the Blue Future Group</div>
     </div>
 
-<!--short message of our mission-->
-<div class="content-area" id="ourMission">
-  <div class="wrapper">
-      <hr>
-      <h2>Our Mission</h2>
-      <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities.</p>
-      <hr>
-      <h2>Who we are…</h2>
-      <p>The Blue Future Club is a non-profit, community education organization dedicated to enhancing eco-friendly waste management on our shores. Our organization was founded in 1999 and is overseen by a volunteer board made up of representatives from businesses, industry, environmental organizations, and civic associations. As an affiliate of the local County, we continually strive to make great efforts to keep our beaches clean, beautiful, and safe for the future of our community.</p>
-      <hr>
-      <h2>Why we do it …</h2>
-      <p>Beach cleanups offer a fantastic opportunity to help protect the marine environment and generate public awareness while getting some exercise! During our two-hour-cleanups, we collect trash from a local beach and document our findings, contributing to a long-term study on marine pollution. Each event begins with a brief presentation on local beach debris issues and practical ways to safeguard our oceans. At the end of the cleanup, we weigh the collected trash to track our impact. It’s a fun and educational experience for kids as well!</p>
-      <hr>
-      <h2>How it all started …</h2>
-      <p>The Blue Future Club was founded in 1999 by the local mayor and a beach restaurant owner who wanted to simply start taking a stand against marine pollution. In the early years, BFC focused primarily on campaigns to protect individual species, such as birds and sea turtles. Although we have celebrated several victories, it became clear that these species couldn’t be protected without safeguarding their habitats and implementing strong, effective policies. This realization prompted us to think bigger, expand our programs, and adopt a broader, ecosystem-based approach to conservation.</p>
-      <hr>
-      <h2>Who can sign up …</h2>
-      <p>Blue Future Club is committed to fostering an inclusive environment where all volunteers are valued and respected. We welcome participation from individuals of all backgrounds and experiences, without discrimination or harassment of any kind, including race, color, religion, age, sex, national origin, sexual orientation, gender identity, or any other characteristics protected by the law. We encourage volunteers with diverse skills and experiences to join us—perfection is not required! By working together, we can grow Blue Future Club into a stronger, more inclusive community dedicated to protecting our oceans.</p>
-
-      <hr id="signUp">
-      
-  </div>
-</div>
-
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="banner.jpg" class="d-block w-100" alt="...">
+    <!-- Our Mission Section -->
+    <div class="content-area" id="ourMission">
+        <div class="wrapper">
+            <hr>
+            <h2>Our Mission</h2>
+            <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities.</p>
+            <hr>
+            <h2>Who We Are…</h2>
+            <p>The Blue Future Club is a non-profit, community education organization dedicated to enhancing eco-friendly waste management on our shores. Our organization was founded in 1999 and is overseen by a volunteer board made up of representatives from businesses, industry, environmental organizations, and civic associations. As an affiliate of the local County, we continually strive to keep our beaches clean, beautiful, and safe for the future of our community.</p>
+            <hr>
+            <h2>Why We Do It …</h2>
+            <p>Beach cleanups offer a fantastic opportunity to help protect the marine environment and generate public awareness while getting some exercise! During our two-hour cleanups, we collect trash from a local beach and document our findings, contributing to a long-term study on marine pollution. Each event begins with a brief presentation on local beach debris issues and practical ways to safeguard our oceans. At the end of the cleanup, we weigh the collected trash to track our impact. It’s a fun and educational experience for kids as well!</p>
+            <hr>
+            <h2>How It All Started …</h2>
+            <p>The Blue Future Club was founded in 1999 by the local mayor and a beach restaurant owner who wanted to take a stand against marine pollution. In the early years, BFC focused primarily on campaigns to protect individual species, such as birds and sea turtles. Although we have celebrated several victories, it became clear that these species couldn’t be protected without safeguarding their habitats and implementing strong, effective policies. This realization prompted us to think bigger, expand our programs, and adopt a broader, ecosystem-based approach to conservation.</p>
+            <hr>
+            <h2>Who Can Sign Up …</h2>
+            <p>The Blue Future Club is committed to fostering an inclusive environment where all volunteers are valued and respected. We welcome participation from individuals of all backgrounds and experiences, without discrimination or harassment of any kind. We encourage volunteers with diverse skills and experiences to join us—perfection is not required! By working together, we can grow the Blue Future Club into a stronger, more inclusive community dedicated to protecting our oceans.</p>
+            <hr id="signUp">
+        </div>
     </div>
-    <div class="carousel-item">
-      <img src="banner.jpg" class="d-block w-100" alt="...">
+
+    <!-- Carousel Section -->
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="banner.jpg" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+                <img src="banner.jpg" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="banner.jpg" class="d-block w-100" alt="Slide 3">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <div class="carousel-item">
-      <img src="banner.jpg" class="d-block w-100" alt="...">
+
+    <!-- Sign Up Form Section -->
+    <div class="signUp">
+        <form action="/submit" method="post" enctype="multipart/form-data" id="signUp">
+            <h2>Volunteer</h2>
+            <div>
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" name="first_name" required>
+            </div>
+            <div>
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" name="last_name" required>
+            </div>
+            <div>
+                <label for="age">Age</label>
+                <input type="number" id="age" name="age" min="1" required>
+            </div>
+            <div>
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="reason">Why Would You Like to Join the Beach Cleanup?</label>
+                <textarea id="reason" name="reason" maxlength="250" rows="4" placeholder="Write up to 250 characters" required></textarea>
+            </div>
+            <div>
+                <label for="picture">Upload a Picture (Max 2 MB)</label>
+                <input type="file" id="picture" name="picture" accept="image/*" required>
+                <p class="note">Please upload an image file (jpg, png, etc.) with a maximum size of 2 MB.</p>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-  <!--short message of our mission-->
 
-  <!--sign up form to become a volunteer-->
-  <div class="signUp" id="signUp">
-    <form action="/submit" method="post" enctype="multipart/form-data">
-        <!-- First Name -->
-        <h2>Volunteer</h2>
-        <div>
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first_name" required>
+    <!-- Footer Section -->
+    <footer id="contactUs">
+        <div class="footer-content" id="contactUs">
+            <h2>Contact Us</h2>
+            <p>If you have any questions, feel free to reach out!</p>
+            <ul>
+                <li>Email: contact@example.com</li>
+                <li>Phone: (123) 456-7890</li>
+                <li>Address: 123 Main St, Anytown, USA</li>
+            </ul>
         </div>
-
-        <!-- Last Name -->
-        <div>
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last_name" required>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Your Company. All rights reserved.</p>
         </div>
+    </footer>
 
-        <!-- Age -->
-        <div>
-            <label for="age">Age</label>
-            <input type="number" id="age" name="age" min="1" required>
-        </div>
-
-        <!-- Email -->
-        <div>
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-
-        <!-- Why They Want to Join (Textarea) -->
-        <div>
-            <label for="reason">Why Would You Like to Join the Beach Cleanup?</label>
-            <textarea id="reason" name="reason" maxlength="250" rows="4" placeholder="Write up to 250 characters" required></textarea>
-        </div>
-
-        <!-- Picture Upload -->
-        <div>
-            <label for="picture">Upload a Picture (Max 2 MB)</label>
-            <input type="file" id="picture" name="picture" accept="image/*" required>
-            <p class="note">Please upload an image file (jpg, png, etc.) with a maximum size of 2 MB.</p>
-        </div>
-
-        <!-- Submit Button -->
-        <button type="submit">Submit</button>
-    </form>
-  </div>
-  <!--contact us-->
-  <footer>
-    <div class="footer-content" id="contactUs">
-        <h2>Contact Us</h2>
-        <p>If you have any questions, feel free to reach out!</p>
-        <ul>
-            <li>Email: contact@example.com</li>
-            <li>Phone: (123) 456-7890</li>
-            <li>Address: 123 Main St, Anytown, USA</li>
-        </ul>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </div>
-</footer>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
