--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
   
     <!-- Banner Section -->
     <div class="banner-container" id="banner">
-        <img src="banner.jpg" alt="Banner Image" class="banner-image">
+        <img src="Project Images/BEACHbanner.jpg" alt="Banner Image" class="banner-image">
         <div class="banner-text">Welcome to the Blue Future Group</div>
     </div>
 
     <!-- Our Mission Section -->
     <div class="content-area" id="ourMission">
         <div class="wrapper">
-            <hr>
             <h2>Our Mission</h2>
             <p>Our mission is to protect and preserve the beauty of our coastline for future generations. We believe that clean beaches are essential for the health of our marine ecosystems and the well-being of our communities.</p>
             <hr>
@@ -60,33 +59,82 @@
     </div>
 
     <!-- Carousel Section -->
-    <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="carousel-container">
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15" aria-label="Slide 1"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Project Images/img1.jpg" alt="Slide 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img2.jpg"alt="Slide 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img3.jpg" alt="Slide 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img4.jpg" alt="Slide 4">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img5.jpg" alt="Slide 5">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img6.jpg" alt="Slide 6">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img7.jpg"  alt="Slide 7">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img8.jpg" alt="Slide 8">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img9.jpg" alt="Slide 9">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img10.jpg" alt="Slide 10">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img11.jpg" alt="Slide 11">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img12.jpg" alt="Slide 12">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img13.jpg" alt="Slide 13">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img14.jpg" alt="Slide 14">
+                </div>
+                <div class="carousel-item">
+                    <img src="Project Images/img15.jpg" alt="Slide 15">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="banner.jpg" class="d-block w-100" alt="Slide 1">
-            </div>
-            <div class="carousel-item">
-                <img src="banner.jpg" class="d-block w-100" alt="Slide 2">
-            </div>
-            <div class="carousel-item">
-                <img src="banner.jpg" class="d-block w-100" alt="Slide 3">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
-
     <!-- Sign Up Form Section -->
     <div class="signUp">
         <form action="/submit" method="post" enctype="multipart/form-data" id="signUp">
@@ -126,13 +174,13 @@
             <h2>Contact Us</h2>
             <p>If you have any questions, feel free to reach out!</p>
             <ul>
-                <li>Email: contact@example.com</li>
+                <li>Email: VolunteerInfo@bluefuturegroup.com</li>
                 <li>Phone: (123) 456-7890</li>
-                <li>Address: 123 Main St, Anytown, USA</li>
+                <li>Address: 123 Sandy Street, Beachtown, USA</li>
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Your Company. All rights reserved.</p>
+            <p>&copy; 2024 Blue Future Group. All rights reserved.</p>
         </div>
     </footer>
 
